@@ -203,5 +203,4 @@ Author: Sampo Kellomaki (sampo.fi), All Rights Reserved.\n\
    distributed under the License is distributed on an \"AS IS\" BASIS,\n\
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n\
    See the License for the specific language governing permissions and\n\
-   limitations under the License.\n\
-\n\"
+   limitations under the License.";
