@@ -29,14 +29,16 @@ if ($op eq 'version') {
 }
 
 if ($op eq 'license') {
+    s/[ \t\r\n]+$//s;
     s/"/\\"/g;
     s/$/\\n\\/gm;
+    chop; chop; chop;
     print <<LICENSE;
 char* license = "\\n\\
 Copyright (c) 2010 Sampo Kellomaki (sampo@iki.fi), All Rights Reserved.\\n\\
 Copyright (c) 2006-2009 Symlabs (symlabs@symlabs.com), All Rights Reserved.\\n\\
 Author: Sampo Kellomaki (sampo@iki.fi), All Rights Reserved.\\n\\
-$_"
+$_";
 LICENSE
 ;
 }
